--- a/leopard-webform/src/styles.css
+++ b/leopard-webform/src/styles.css
@@ -16,6 +16,7 @@ html {
   margin: 0;
   padding: 0;
   text-decoration-skip-ink: "auto";
+  overflow-x: hidden;
 }
 
 :root {
@@ -55,12 +56,12 @@ html {
 
 body {
   padding: 0;
-  margin: calc((100vh / 25) * 1.563) calc((100vw / 25) * 1.563);
   background-color: white;
   font-weight: 400;
   line-height: 1.563;
   color: var(--text-color);
   caret-color: var(--text-color);
+  overflow-x: hidden;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -80,6 +81,7 @@ h3,
 h4,
 h5,
 h6 {
+  text-align: center;
   margin-bottom: 1rem;
   margin-top: 1em;
   font-weight: bold;
@@ -98,7 +100,7 @@ h2 {
 }
 
 h3 {
-  font-size: 1.953rem;
+  font-size: 1.5rem;
   letter-spacing: -0.09rem;
   line-height: 1.2;
 }
@@ -174,9 +176,37 @@ hr {
 
 /* Form
 ––––––––––––––––––––––––––––––––– */
+.form-container {
+  width: 500px;
+  margin: 0 auto;
+  margin-top: 20px;
+}
+
+.info-container {
+  width: 50%;
+  margin: 0 auto;
+}
+
+@media only screen and (max-width: 460px) {
+  .form-container {
+    width: 300px;
+  }
+
+  .info-container {
+    width: 65%;
+    margin: 0 auto;
+  }
+}
+
 label {
   font-weight: bold;
   display: flex;
+}
+
+.shop-logo {
+  width: 70%;
+  display: block;
+  margin: 0 auto;
 }
 
 input[type="email"],
@@ -449,6 +479,37 @@ input[type="reset"]:focus-visible,
 input[type="button"]:focus-visible {
   border-color: var(--focus-ring-color);
   outline: none;
+}
+
+.signup-text {
+  font-size: 12px;
+  margin-top: 30px;
+  text-align: center;
+}
+
+.signup-checkbox {
+  margin-top: 20px;
+  font-size: 16px;
+}
+
+.signup-checkbox input[type="checkbox"] {
+  width: 25px;
+  height: 25px;
+}
+
+.leopard-footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 35px;
+  background-color: #F77F00;
+  color: black;
+  text-align: center;
+}
+
+.leopard-footer p {
+  margin: auto;
 }
 
 /* Tables
